compiler/e2e/test/snapshot/term/type_alias/not_found/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: the symbol could not be found
  ╭─ compiler/e2e/test/snapshot/term/type_alias/not_found/main.pnx:1:53
  │
1 │ public type Fizz['a, 'b, T, U] = (&'a T, U, &'b mut What)
  │                                                     ^^^^ the symbol named `What` does not exist in `main`

error: Compilation aborted due to 1 error(s)



stdout:
